--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,3 @@
 **/images/
-
-debug*png
-maml_*out
-maml_*db
-da_*out
-da_*db
-*manifest
-predict_examples
-predictions.db
-bnn_graph.predict.frozen.pb
-bnn_graph.predict.pbtxt
-predict*png
-labels
-predict*out
-example*png
-ckpts
-tb
-o_*png
-train*png
-test*png
-*pyc
-*py~
+__pycache__/
+.idea/
