--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ python-dateutil==2.8.1
 python-utils==2.4.0
 PyWavelets==1.1.1
 PyYAML==5.3.1
+rawpy==0.16.0
 requests==2.24.0
 requests-oauthlib==1.3.0
 rsa==4.6
