--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,12 @@ certifi==2020.6.20
 chardet==3.0.4
 cycler==0.10.0
 decorator==4.4.2
+flatbuffers==1.12
 gast==0.3.3
 google-auth==1.22.1
 google-auth-oauthlib==0.4.1
 google-pasta==0.2.0
-grpcio==1.33.1
+grpcio==1.32.0
 h5py==2.10.0
 idna==2.10
 imageio==2.9.0
@@ -19,7 +20,7 @@ kiwisolver==1.2.0
 Markdown==3.3.2
 matplotlib==3.3.2
 networkx==2.5
-numpy==1.18.5
+numpy==1.19.5
 oauthlib==3.1.0
 opt-einsum==3.3.0
 Pillow==8.0.1
@@ -41,13 +42,14 @@ scikit-image==0.17.2
 scikit-learn==0.23.2
 scipy==1.5.3
 six==1.15.0
-tensorboard==2.3.0
+tensorboard==2.4.1
 tensorboard-plugin-wit==1.7.0
-tensorflow==2.3.1
-tensorflow-estimator==2.3.0
+tensorflow==2.4.1
+tensorflow-estimator==2.4.0
 termcolor==1.1.0
 threadpoolctl==2.1.0
 tifffile==2020.10.1
+typing-extensions==3.7.4.3
 urllib3==1.25.11
 Werkzeug==1.0.1
 wrapt==1.12.1
