--- a/requirements.txt
+++ b/requirements.txt
@@ -45,10 +45,12 @@ six==1.15.0
 tensorboard==2.4.1
 tensorboard-plugin-wit==1.7.0
 tensorflow==2.4.1
+tensorflow-addons==0.12.1
 tensorflow-estimator==2.4.0
 termcolor==1.1.0
 threadpoolctl==2.1.0
 tifffile==2020.10.1
+typeguard==2.12.0
 typing-extensions==3.7.4.3
 urllib3==1.25.11
 Werkzeug==1.0.1
